Changed formatter